--- a/estudos.html
+++ b/estudos.html
@@ -19,6 +19,8 @@
             
             <a href="estudos.html" class="linkprincipal" target="_self">Estudos</a>
 
+            <a href="Portifolio.html" class="linkprincipal">Portifolio</a>
+            
             <a href="contato.html" class="linkprincipal" target="_self">Contato</a>
 
         </nav>
