--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             
             <a href="estudos.html" class="linkprincipal" target="_self">Estudos</a>
 
+
+            <a href="Portifolio.html" class="linkprincipal">Portifolio</a>
+
             <a href="contato.html" class="linkprincipal" target="_self">Contato</a>
 
         </nav>
@@ -34,17 +37,36 @@
                 <h2 class="h2-1"> Quem é Silas Roberto?</h2>
 
                 
-                <img src="imagens/foto-sem-fundo-silas.png"  alt="Imagem de Silas Roberto" width="15%">
+                <img src="imagens/foto-sem-fundo-silas.png"  alt="Imagem de Silas Roberto" width="21%">
 
-                <p id="p1"> Olá e bem-vindo(a) à minha página de portfólio! Meu nome é <span style="color: darkred;">Silas Roberto</span>, tenho 24 anos e sou estudante de Análise e Desenvolvimento de Sistemas na UNINTER, aqui em Curitiba. Sou apaixonado por tecnologia e estou sempre em busca de novas oportunidades para aprender e crescer na área de desenvolvimento. Além do meu interesse por sistemas, sou cristão, gosto de academia e de corrida. Espero que você encontre nesta página um pouco mais sobre minha jornada e habilidades. Sinta-se à vontade para explorar e entrar em contato caso queira saber mais!
+                <p class="p1"> Olá e bem-vindo(a) à minha página de portfólio! Meu nome é <span style="color: darkred;">Silas Roberto</span>, tenho 24 anos e sou estudante de Análise e Desenvolvimento de Sistemas na UNINTER, aqui em Curitiba.
+                <br>
+                Sou apaixonado por tecnologia e estou sempre em busca de novas oportunidades para aprender e crescer na área de desenvolvimento. 
+                <br>
+                Além do meu interesse por sistemas, sou cristão, gosto de academia e de corrida.
+                <br>
+                Desde muito jovem, tive a oportunidade de explorar o Brasil e além.
+                <br>
+                Nascido em Goiânia, Goiás, passei os primeiros anos da minha vida no Paraguai, de dois a quatro anos de idade. 
+                <br>
+                Posteriormente, morei por uma boa parte da minha vida em São Paulo.
+                <br>
+                Durante esse período, tive o privilégio de conhecer diversas regiões do país. Embora seja difícil lembrar de todas as cidades visitadas, posso destacar os estados que explorei: Goiás, São Paulo, Minas Gerais, Mato Grosso, Mato Grosso do Sul, Espírito Santo, Rio de Janeiro, Piauí, Pará, Paraná, Ceará e Santa Catarina.
+                <br>
+                Espero que você encontre nesta página um pouco mais sobre minha jornada e habilidades.
+                <br>
+                Sinta-se à vontade para explorar e entrar em contato caso queira saber mais!
 
                 </p>
 
+                <p>
+
+                </p>
             </article>
         </section>
 
     </main>
 
-    <!--<tfoot> Página de apresentação </tfoot>-->
+    <footer id="rodape"> Página de apresentação </footer>
 </body>
 </html>
