--- a/contato.html
+++ b/contato.html
@@ -17,6 +17,8 @@
             
             <a href="estudos.html" class="linkprincipal" target="_self">Estudos</a>
 
+            <a href="Portifolio.html" class="linkprincipal">Portifolio</a>
+
             <a href="contato.html" class="linkprincipal" target="_self">Contato</a>
 
         </nav>
