--- a/Portifolio.html
+++ b/Portifolio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <!-- -->
+    <!-- Explicação: Este é o código da terceira pagina, o mesmo visa trazer informações sobre minha carreira profissinal e sobre informações sobre algum projeto que eu desenvolvi.  -->
 
     <header>
         <nav class="nav1">
@@ -29,6 +29,8 @@
 
     <main>
 
+        <!--Esta parte, é referente a extrutura principal <main> desta página, onde o mesmo está elaborado para trazer as referencias e informações sobre a minha pessoa, e também traz a imerção para fora da página do site para direcionar ao site mostrado, como portifolio, onde o mesmo foi desenvolvido por mim.-->
+            
         <section>
             <h2 class="h2-2">Portifolio</h2>
 
